# project_willow

./: .gitignore  README.md  pyproject.toml
src/: common.py  main.py  scrub.py  stock_choices.toml
