[tool.poetry]
name = "project_willow"
version = "0.1.0"
description = ""
authors = ["Matt-Stedman <matts951@gmail.com>"]
license = "MIT"

[tool.poetry.dependencies]
python = "^3.6.8"
numpy = "^1.19.0"
yfinance = "^0.1.54"
toml = "^0.10.1"
bokeh = "^2.1.1"
black = "^19.10b0"


[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
